Try parsing the model as a file, and if it fails, try parsing as a URL.